--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li> -->
-          <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
+          <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Favorite tools</span></a></li> -->
+          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Quotations</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>NGUYEN DUY NGOC</h1>
-      <p>I'm <span class="typed" data-typed-items="Developer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Student, Developer, Monitor"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -116,7 +116,7 @@
               </div>
             </div>
             <p>
-              University student majoring in Computer Science, looking for a job with a stable income at a company. Experienced with Python, C++ and JavaScript programming languages. Looking to apply coding skills and creativity in game, machine learning development.
+              University student majoring in Computer Science, looking for a job with a stable income at a company. Experience with Python, C++ and JavaScript programming languages. Desire to apply coding skills and creativity in game development, machine learning, mobile apps, and artificial intelligence.
             </p>
           </div>
         </div>
@@ -218,9 +218,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Japanese <i class="val">30%</i></span>
+              <span class="skill">Japanese <i class="val">20%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -426,7 +426,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Favorite tools</h2>
+          <h2>Tools</h2>
         </div>
 
         <div class="row">
