--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a href="https://twitter.com/NgcNguynDuy2" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/ngoc.nguyenduy.5836711/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/ngocchangzz/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://secure.skype.com/portal/profile" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="https://join.skype.com/invite/vfcc5L2s9s8k" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="https://www.linkedin.com/in/ng%E1%BB%8Dc-nguy%E1%BB%85n-duy-42a395229/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
