--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>NGUYEN DUY NGOC</h1>
-      <p>I'm a <span class="typed" data-typed-items="Student, Developer, Monitor"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Alumnus, Developer, Monitor"></span></p>
     </div>
   </section><!-- End Hero -->
 
