--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/pro.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/av.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">NGUYEN DUY NGOC</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/NgcNguynDuy2" class="twitter"><i class="bx bxl-twitter"></i></a>
